# BuzzU-Mono

./: .gitignore  BUZZU_REPO_SPLIT_PLAN.md  CF_WORKER_PATTERNS_RESEARCH.md  CHATAREA_REMEDIATION_PLAN.md  CORE_FILES.md  MATRIX_PQ_E2EE_IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS_ASSESSMENT.md  RELIABILITY_REPORT.md  ROOM_EPHEMERAL_PLAN.md  SCREEN_SHARE_BUGS_RESEARCH.md  UI_prompt.md  Untitled-1.txt  WEBRTC_PATTERNS_REPORT.md  cleanup_destructuring.py  dir_size.js  dir_size.py  package-lock.json  package.json  pnpm-lock.yaml  prompt_rev.md  propagate_avatar_seed.py  replace_dicebear.py  signalgap.md  turbo.json
apps/matchmaker-worker/: Cargo.toml  build.ps1  wrangler.toml
apps/matchmaker-worker/src/: lib.rs
apps/reputation-worker/: Cargo.toml  wrangler.toml
apps/reputation-worker/src/: lib.rs
apps/signaling-worker/: .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  build.ps1  package.json  wrangler.toml
apps/signaling-worker/.github/workflows/: deploy.yml
apps/signaling-worker/src/: lib.rs
apps/web/: README.md  buzzu_vibes_1000.txt  extract_songs.cjs  index.html  index.tsx  package-lock.json  package.json  playwright.config.ts  styles.css  tsconfig.json  vite.config.ts  wrangler.toml
apps/web/chitchat-dashboard/: App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  pnpm-lock.yaml
apps/web/components/: ThemeContext.tsx
apps/web/dev-dist/: sw.js
apps/web/e2e/: capture-ui-audit.mjs  match-ui.spec.ts  (+5 more)
components/: AuthButtons.tsx  FooterLinks.tsx  HappeningNow.tsx  SocialAuthLanding.tsx
tools/: load-test.mjs
(+206 files in other folders)
